ATLAS-4360:UI: Misalignment of placeholder text in labels, enum attributes and classification fields in Chrome, fixed
(cherry picked from commit e9c99739010b451638ad90773ca8d36e86fd2841)

--- a/dashboardv2/public/css/scss/override.scss
+++ b/dashboardv2/public/css/scss/override.scss
@@ -567,3 +567,7 @@ div.columnmanager-dropdown-container {
 .tooltip-inner {
     max-width: 250px;
 }
+
+.select2-container--default .select2-search--inline .select2-search__field {
+    width: 100% !important;
+}
